base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bkextest
spec:
  selector:
    matchLabels:
      app: bkextest
  replicas: 1
  template:
    metadata:
      labels:
        app: bkextest
    spec:
      containers:
      - name: bkextest
        image: harbor.cis-qas.brown.edu/bkextest/bkextest:latest
        imagePullPolicy: Always    
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: bkextest
          mountPath: /usr/share/nginx/html
      volumes:
      - name: bkextest
        persistentVolumeClaim:
          claimName: bkextest
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
