base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bkextest
spec:
  selector:
    matchLabels:
      app: bkextest
  serviceName: bkextest
  replicas: 1
  template:
    metadata:
      labels:
        app: bkextest
    spec:
      containers:
      - name: bkextest
        image: harbor.cis-qas.brown.edu/bkextest/bkextest:latest
        imagePullPolicy: Always    
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: vast-bkextest
          mountPath: /usr/share/nginx/html
        resources:
          requests:
            cpu: 100m
            memory: "128M"
          limits:
            cpu: 100m
            memory: "256M"
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
  volumeClaimTemplates:
  - metadata:
      name: vast-bkextest
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: vast-oitvo-nfs
      resources:
        requests:
          storage: 100M
