base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bkextest
spec:
  ports:
  - name: http-web
    port: 8080
  selector:
    app: bkextest
