base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bkextest
  annotations:
    cert-manager.io/cluster-issuer: "bke-ci-ucc"

spec:
  ingressClassName: nginx
  rules:
  - host: bkeitest.virtorch.brown.edu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bkextest
            port:
              number: 8080
